--- a/site/public/css/Testes.css
+++ b/site/public/css/Testes.css
@@ -20,7 +20,7 @@ a {
     font-family: 'Roboto', sans-serif;
     display: flex;
 width: 100%;
-padding-left: 190px;
+padding-left: 92px;
 font-size: 60px;
 
 }
@@ -117,3 +117,17 @@ text-align: left;
 width: 88%;
 
 }
+
+*::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  *::-webkit-scrollbar-track {
+    background: #001329;
+  }
+  
+  *::-webkit-scrollbar-thumb {
+    background-color: #050f6e;  
+    border-radius: 20px;
+    border: 4px solid #040d58;
+  }
