--- a/site/public/css/index.css
+++ b/site/public/css/index.css
@@ -139,3 +139,17 @@ a {
     height: 295px;
 
 }
+
+*::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  *::-webkit-scrollbar-track {
+    background: #001329;
+  }
+  
+  *::-webkit-scrollbar-thumb {
+    background-color: #050f6e;  
+    border-radius: 20px;
+    border: 4px solid #040d58;
+  }
