--- a/site/public/css/noticias.css
+++ b/site/public/css/noticias.css
@@ -12,9 +12,70 @@
 
     color: #ffffff;
     font-size: 90px;
-    padding-left: 100px;
+
     border: 0%;
-    padding-top: 20px;
+    padding-top: 10px;
     padding-bottom: 20px;
     font-family: 'Roboto', sans-serif;
+    text-align: center;
 }
+
+
+h1 {
+
+    color: #ffffff;
+    font-size: 95px;
+    margin: 0%;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    font-family: 'Roboto', sans-serif;
+}
+
+
+.div_centralizado {
+
+    display: flex;
+    width: 90%;
+    flex-direction: column;
+    justify-content: center;
+    align-self: center;
+
+
+}
+
+
+.div_video {
+
+    display: flex;
+    justify-content: center;
+    justify-self: center;
+    border-radius: 30px;
+
+}
+
+iframe {
+
+    display: flex;
+    border-radius: 30px;
+    border: solid rgb(57, 100, 219) 5px;
+    width: 100%;
+    height: 725px;
+
+}
+
+
+
+
+*::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  *::-webkit-scrollbar-track {
+    background: #001329;
+  }
+  
+  *::-webkit-scrollbar-thumb {
+    background-color: #050f6e;  
+    border-radius: 20px;
+    border: 4px solid #040d58;
+  }
