--- a/site/public/css/ResultAloy.css
+++ b/site/public/css/ResultAloy.css
@@ -20,7 +20,7 @@
     border-color: black;
     align-items: center;
     border-radius: 20px;
-    color: #ffffff;
+    color: #000000;
     
 }
 
@@ -33,6 +33,14 @@
     align-items: center;
     padding-left: 60px;
 }
+
+.div_texto span {
+
+    font-size: 50px;
+    font-weight: 500;
+
+}
+
 
 .img_Aloy {
     width: 30%;
@@ -55,6 +63,9 @@
 h1 {
     text-align: center;
     font-family: 'Roboto', sans-serif;
+    margin-bottom: 15px;
+    margin-top: 15px;
+    font-size: 60px;
 }
 
 button {
