--- a/site/public/css/ResultJim.css
+++ b/site/public/css/ResultJim.css
@@ -20,7 +20,7 @@
     border-color: black;
     align-items: center;
     border-radius: 20px;
-    color: #ffffff;
+    color: #000000;
     
 }
 
@@ -32,6 +32,13 @@
     font-family: 'Roboto', sans-serif;
     align-items: center;
     padding-left: 60px;
+}
+
+.div_texto span {
+
+    font-size: 50px;
+    font-weight: 500;
+
 }
 
 .img_Jim {
@@ -55,6 +62,9 @@
 h1 {
     text-align: center;
     font-family: 'Roboto', sans-serif;
+    margin-bottom: 15px;
+    margin-top: 15px;
+    font-size: 60px;
 }
 
 button {
