--- a/site/public/css/ResultKratos.css
+++ b/site/public/css/ResultKratos.css
@@ -34,6 +34,13 @@
     padding-left: 60px;
 }
 
+.div_texto span {
+
+    font-size: 50px;
+    font-weight: 500;
+
+}
+
 .img_Kratos {
     width: 30%;
     display: table-cell;
@@ -55,6 +62,9 @@
 h1 {
     text-align: center;
     font-family: 'Roboto', sans-serif;
+    margin-bottom: 15px;
+    margin-top: 15px;
+    font-size: 60px;
 }
 
 button {
