--- a/site/public/css/dashboard.css
+++ b/site/public/css/dashboard.css
@@ -3,7 +3,7 @@
 }
 
 #imagemFundo {
-    background-image: url(../assets/imagens/FundoDash2.jpg);
+    background-image: url(../assets/imagens/fundoDash4.png);
     background-repeat: no-repeat;
     background-size: 100% 100%;
 }
@@ -16,13 +16,13 @@
 
 .div_container {
 
-        display: flex;
-        flex-direction: row;
-        height: 150px;
-        width: auto;
-        background-color: black;
-justify-content: space-between;
-font-family: 'Roboto', sans-serif;
+    display: flex;
+    flex-direction: row;
+    height: 150px;
+    width: auto;
+    background-color: black;
+    justify-content: space-between;
+    font-family: 'Roboto', sans-serif;
 
 }
 
@@ -81,13 +81,13 @@ body {
 
     text-decoration: none;
     color: #ffffff;
-    
-    
-    }
+
+
+}
 
 /* Fim do header */
 
-    
+
 .conteudo {
 
     display: flex;
@@ -96,88 +96,42 @@ body {
 }
 
 
-    .info1 {
+.info1 {
 
-display: flex;
-flex-direction: row;
-align-items: center;
-width: 90%;
-align-self: center;
-padding-top: 50px;
-    }
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 90%;
+    align-self: center;
+
+}
 
 .info1 span {
 
     color: #ffffff;
     font-family: 'Roboto', sans-serif;
     display: flex;
-width: 100%;
-font-size: 100px;
-
-text-align: center;
+    width: 100%;
+    font-size: 100px;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
 
 }
 
 
-    .grafico {
-
-height: 500px;
-width: 650px;
-align-items: center;
 
 
-    }
+.grafico {
+
+    height: 550px;
+    width: 715px;
+
+}
+
+canvas #myChart {
+
+justify-content: center;
 
 
-
-
-
-
-
-    .info2 {
-
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-padding-bottom: 50px;
-    }
-
-    .info2 span {
-
-        color: #ffffff;
-        font-family: 'Roboto', sans-serif;
-        display: flex;
-    width: 100%;
-    font-size: 70px;
-    padding-left: 30px;
-    padding-right: 30px;
-    }
-
-
-    .comentario {
-
-display: flex;
-flex-direction: column;
-align-items: center;
-
-    }
-
-
-
-    .comentario span {
-text-align: center;
-        color: #ffffff;
-        font-family: 'Roboto', sans-serif;
-        display: flex;
-    width: 100%;
-    font-size: 30px;
-
-    }
-
-
-
-    textarea {
-        height: max-content;
-        width: 80%;
-        resize: none;
-    }
+}
