--- a/site/public/css/Testes.css
+++ b/site/public/css/Testes.css
@@ -1,14 +1,16 @@
 body {
-    zoom: 1 /* Coloca o zoom em 200% */
+
+    zoom: 1
+        /* Coloca o zoom em 200% */
 }
 
 
 .div_container4 {
+
     display: flex;
     height: 1000px;
     width: 100%;
     background-color: #001329;
-
 }
 
 a {
@@ -22,19 +24,18 @@ a {
     color: #ffffff;
     font-family: 'Roboto', sans-serif;
     display: flex;
-width: 100%;
-padding-left: 92px;
-font-size: 60px;
-
+    width: 100%;
+    padding-left: 92px;
+    font-size: 60px;
 }
 
 
 .div_direita {
+
     display: flex;
     flex-direction: column;
     width: 45%;
     align-items: center;
-
 }
 
 .div_direita img {
@@ -51,33 +52,22 @@ font-size: 60px;
     text-decoration: none;
     color: #ffffff;
     font-family: 'Roboto', sans-serif;
-font-size: 25px;
+    font-size: 25px;
 }
-
-
-
 
 .div_linha {
 
     width: 3px;
     height: 1000px;
     background-color: #696969;
-
-
 }
 
-
-
-
-
-
-
 .div_esquerda {
+
     display: flex;
     flex-direction: column;
     width: 55%;
     align-items: center;
-
 }
 
 .div_esquerda h1 {
@@ -85,9 +75,8 @@ font-size: 25px;
     color: #ffffff;
     font-family: 'Roboto', sans-serif;
     display: flex;
-width: 100%;
-font-size: 60px;
-
+    width: 100%;
+    font-size: 60px;
 }
 
 
@@ -98,39 +87,37 @@ font-size: 60px;
     border-radius: 30px;
     border: solid;
     border-color: black;
-
 }
-
-
 
 .div_esquerda span {
 
     color: #ffffff;
     font-family: 'Roboto', sans-serif;
     font-size: 55px;
-
 }
 
 .div_junto {
 
-display: flex;
-align-items: center;
-flex-direction: column;
-text-align: left;
-width: 88%;
-
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    text-align: left;
+    width: 88%;
 }
 
 *::-webkit-scrollbar {
+
     width: 10px;
-  }
-  
-  *::-webkit-scrollbar-track {
+}
+
+*::-webkit-scrollbar-track {
+
     background: #001329;
-  }
-  
-  *::-webkit-scrollbar-thumb {
-    background-color: #050f6e;  
+}
+
+*::-webkit-scrollbar-thumb {
+
+    background-color: #050f6e;
     border-radius: 20px;
     border: 4px solid #040d58;
-  }
+}
