--- a/site/public/css/dashboard.css
+++ b/site/public/css/dashboard.css
@@ -3,6 +3,7 @@
 }
 
 #imagemFundo {
+
     background-image: url(../assets/imagens/fundoDash4.png);
     background-repeat: no-repeat;
     background-size: 100% 100%;
@@ -10,6 +11,7 @@
 
 
 .div_container img {
+
     padding-left: 20px;
     width: 150px;
 }
@@ -23,10 +25,10 @@
     background-color: black;
     justify-content: space-between;
     font-family: 'Roboto', sans-serif;
-
 }
 
 ul {
+
     color: #ffffff;
     font-size: 30px;
     gap: 50px;
@@ -39,6 +41,7 @@ ul {
 }
 
 .btn_Entrar {
+
     background-color: #000000;
     padding: 5px;
     font-size: 30px;
@@ -57,11 +60,10 @@ ul {
     border-radius: 100px;
     color: #ff0000d5;
     width: 100px;
-
-
 }
 
 .btn_Registrar {
+
     background-color: #0070CC;
     border: 3px solid #0070CC;
     border-radius: 100px;
@@ -70,10 +72,10 @@ ul {
     font-size: 30px;
     font-weight: 500;
     width: 150px;
-
 }
 
 body {
+
     margin: 0;
 }
 
@@ -81,18 +83,14 @@ body {
 
     text-decoration: none;
     color: #ffffff;
-
-
 }
 
 /* Fim do header */
-
 
 .conteudo {
 
     display: flex;
     flex-direction: column;
-
 }
 
 
@@ -103,7 +101,6 @@ body {
     align-items: center;
     width: 90%;
     align-self: center;
-
 }
 
 .info1 span {
@@ -116,22 +113,27 @@ body {
     flex-direction: column;
     text-align: center;
     justify-content: center;
-
 }
-
-
-
 
 .grafico {
 
     height: 550px;
     width: 715px;
-
 }
 
-canvas #myChart {
+*::-webkit-scrollbar {
 
-justify-content: center;
+    width: 10px;
+  }
+  
+  *::-webkit-scrollbar-track {
 
-
-}
+    background: #001329;
+  }
+  
+  *::-webkit-scrollbar-thumb {
+    
+    background-color: #050f6e;  
+    border-radius: 20px;
+    border: 4px solid #040d58;
+  }
