--- a/site/public/css/estilo.css
+++ b/site/public/css/estilo.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   padding: 0;
   font-family: 'Barlow', 'Segoe UI', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -256,4 +256,4 @@ body {
   flex-direction: column;
   overflow: scroll; 
   height: var(--tamanho-simulador);
-}
+} */
